# csci-4220

./: README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml
pa-01/: main.py
pa-02/: allenBrice-pa-02.py
paper/: Dockerfile  README.md  pyproject.toml  requirements.txt
paper/src/: app.py  data.json
