[tool.poetry]
name = "summer-final"
version = "0.1.0"
description = "Final project for Social Networks and Informatics: CSCI-4220, CU Denver"
authors = ["bk <briceallen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.11.0"
plotly = "^5.3.1"
scikit-learn = "^1.1.1"
Pillow = "^10.0.1"
spotipy = "^2.22.1"
requests = "^2.31.0"
secrets = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
protobuf ="3.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
